--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <input type="text" id="text" placeholder="Linki veya Yazıyı Giriniz.." class="input" />
-        <button type="button" onclick="generateQR()"> Oluştur </button>
+        <button type="button" onclick="generateQR()"> Create </button>
         <div id="qr-image"><span class="error"></span><br /><img src="" alt="" id="img"></div>
     </div>
 </body>
